--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "primereact": "^8.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
